force-app/main/default/objects/Meeting_Note__c/Meeting_Note__c.object-meta.xml
<CustomObject>
    <description>This object is to track meeting related notes.</description>
    <label>Meeting Note</label>
    <nameField>
        <displayFormat>MN-{000000}</displayFormat>
        <label>Meeting Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>