force-app/main/default/objects/Meeting_Note__c/fields/Notes_Contents__c.field-meta.xml
<CustomField>
    <fullName>Notes_Contents__c</fullName>
    <label>Notes Contents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>